--- a/style2.css
+++ b/style2.css
@@ -32,6 +32,8 @@ width: 100% ;
 .tel-transaction{
  background-color: white;
  width: 100% ;
+ border-bottom-right-radius:15px ;
+ border-bottom-left-radius:15px;
  
  margin-top:10px ;
 }
